feat: переделал стили, сделал ExitPopup

--- a/LastBell/Resources/Styles/ButtonStyles.xaml
+++ b/LastBell/Resources/Styles/ButtonStyles.xaml
@@ -21,12 +21,16 @@
     
     <Style TargetType="components:RoundedButton" x:Key="ButtonStyle">
         <Setter Property="FontFamily" Value="{StaticResource TTNorms}"/>
+        <Setter Property="BorderBrush" Value="Transparent"/>
+        <Setter Property="BorderThickness" Value="0"/>
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="components:RoundedButton">
                     <Border CornerRadius="{TemplateBinding CornerRadius}"
                             Background="{TemplateBinding Background}"
-                            Padding="{TemplateBinding Padding}">
+                            Padding="{TemplateBinding Padding}"
+                            BorderBrush="{TemplateBinding BorderBrush}"
+                            BorderThickness="{TemplateBinding BorderThickness}">
                         <ContentPresenter ContentTemplate="{TemplateBinding Content}"
                                           HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
                                           VerticalAlignment="Center"/>
