--- a/LastBell/Views/Popups/PasswordPopupView.xaml
+++ b/LastBell/Views/Popups/PasswordPopupView.xaml
@@ -14,7 +14,7 @@
         <SolidColorBrush x:Key="MainBackground" Color="{StaticResource AlmostWhite}" />
         <SolidColorBrush x:Key="MainForeground" Color="{StaticResource BlackColor}" />
         <SolidColorBrush x:Key="SecondaryForeground" Color="{StaticResource BlackColor}" />
-        <SolidColorBrush x:Key="SecondaryBackground" Color="{StaticResource YellowColor}"/>
+        <SolidColorBrush x:Key="SecondaryBackground" Color="{StaticResource BlueWhiteColor}"/>
 
         <Style TargetType="Button" x:Key="MainButtonStyle">
             <Setter Property="Background" Value="{StaticResource SecondaryBackground}"></Setter>
