--- a/LastBell/Views/Popups/ExitPopup.xaml
+++ b/LastBell/Views/Popups/ExitPopup.xaml
@@ -1,13 +1,13 @@
 ﻿<UserControl x:Class="LastBell.Views.Popups.ExitPopup"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:local="clr-namespace:LastBell.Views.Popups"
              xmlns:popupContainers="clr-namespace:MainComponents.Popups.PopupContainers;assembly=MainComponents"
              xmlns:components="clr-namespace:MainComponents.Components;assembly=MainComponents"
              xmlns:popups="clr-namespace:LastBell.ViewModels.Popups"
-             mc:Ignorable="d" 
+             mc:Ignorable="d"
              d:DataContext="{d:DesignInstance popups:ExitPopupViewModel}">
     <popupContainers:ScaleContainer>
         <Border Background="{StaticResource WhiteBrush}"
@@ -15,8 +15,8 @@
                 Width="880" Height="528">
             <StackPanel Margin="40">
                 <ContentPresenter ContentTemplate="{StaticResource WarningIcon}"
-                              Width="128" Height="128"
-                              HorizontalAlignment="Center"/>
+                                  Width="128" Height="128"
+                                  HorizontalAlignment="Center" />
                 <TextBlock Style="{StaticResource EuropeExtText}"
                            FontSize="48"
                            FontWeight="Bold"
@@ -24,14 +24,14 @@
                            Text="ВЫ УВЕРЕНЫ ЧТО ХОТИТЕ ВЫЙТИ?"
                            Width="500"
                            TextAlignment="Center"
-                           Margin="0 40 0 16"/>
+                           Margin="0 40 0 16" />
                 <TextBlock Style="{StaticResource TTNormsText}"
                            FontSize="24"
                            FontWeight="Normal"
                            HorizontalAlignment="Center"
                            Text="Результаты теста не будут сохранены"
                            Width="500"
-                           TextAlignment="Center"/>
+                           TextAlignment="Center" />
 
                 <StackPanel Orientation="Horizontal"
                             HorizontalAlignment="Center"
@@ -50,6 +50,7 @@
                                               FontWeight="Bold"
                                               Foreground="{StaticResource ButtonForegroundBrush}"
                                               HorizontalContentAlignment="Center"
+                                              Margin="0 0 16 0"
                                               Command="{Binding GoBackNavigationCommand}" />
                     <components:RoundedButton Content="Выйти"
                                               Style="{StaticResource ButtonStyle}"
